--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "apexcharts": "^5.3.6",
     "pinia": "^3.0.4",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.25",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "vue3-apexcharts": "^1.10.0"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.3",
