--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "apexcharts": "^5.3.6",
     "pinia": "^3.0.4",
+    "primevue": "^3.53.1",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3",
